# zathura-pdf-poppler

./: .gitignore  .gitlab-ci.yml  AUTHORS  Doxyfile  LICENSE  Makefile  README  README.md  annotations.c  attachments.c  config.mk  document.c  forms.c  image.c  links.c  meson.build  meson_options.txt  meta.c  page.c  pdf.c  pdf.h  plugin.c  plugin.h  render.c  search.c  select.c  utils.c  utils.h  zathura-pdf-poppler.metainfo.xml
data/: meson.build  org.pwmt.zathura-pdf-poppler.desktop  org.pwmt.zathura-pdf-poppler.metainfo.xml
doc/: Doxyfile  Makefile  conf.py  index.rst  installation.rst
subprojects/: zathura.wrap
tests/: .gitignore  Makefile  annotations.c  annotations.cpp  attachments.c  attachments.cpp  config.mk  document.c  document.cpp  form-fields.c  form-fields.cpp  image.c  image.cpp  links.c  links.cpp  meta.c  meta.cpp  outline.c  outline.cpp  page.c  page.cpp  render.c  render.cpp  search.c  search.cpp  select.c  select.cpp  tests.c  utils.c  utils.h
zathura-pdf-poppler/: annotations.c  annotations.cpp  attachments.c  attachments.cpp  document.c  document.cpp  form-fields.c  form-fields.cpp  forms.c  image.c  image.cpp  index.c  internal.h  links.c  links.cpp  macros.h  meta.c  meta.cpp  outline.c  outline.cpp  page.c  page.cpp  plugin.c  plugin.cpp  plugin.h  render.c  render.cpp  search.c  search.cpp  select.c  select.cpp  signature.c  utils.c  utils.h
